# ink-almanac

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HOWTO.md  LICENSE  Makefile  README.md  SETUP.md  local-overrides.env.example
corpus/: README.md  (+1 more)
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini
firmware/.cache/clangd/index/: HAL.h.E78581B710B285F4.idx  IBattery.h.9014C990D51502A8.idx  IClock.h.F1E04C172B96A24A.idx  IDisplay.h.5CC55B045B5B0876.idx  IIMU.h.4F73569D2D9C70A3.idx  IPIR.h.00923ADDA35E8E0D.idx  ITransport.h.F8314EB5DE4080BE.idx  MockBattery.cpp.FBA4CD9DED838F84.idx  MockBattery.h.ACB43348ADCF2AA8.idx  MockClock.cpp.7ECB5D34A4A3B743.idx  MockClock.h.A58A2BBAF1B5A6A3.idx  MockDisplay.cpp.3B8E06598F743EE2.idx  MockDisplay.h.B8BDC3580F072DDC.idx  MockIMU.cpp.578FBB7A5FEE9044.idx  MockIMU.h.10CD375116F7B603.idx  MockPIR.cpp.AA755BA62B658A47.idx  MockPIR.h.A235ECC263C677AF.idx  MockTransport.cpp.6ECECCE1E8D7CFB3.idx  MockTransport.h.DDE9EA7AE7ECCE57.idx  RealBattery.cpp.08F9F0BC9992EC9A.idx  RealClock.cpp.5322184CD40DCFFE.idx  RealDisplay.cpp.4D6D3ACEF0BB40CF.idx  RealIMU.cpp.2320B76341F3AFAB.idx  RealPIR.cpp.6D002FF3AE164601.idx  RealTransport.cpp.488FAB44AC0588BA.idx  Scenario.cpp.E99CB4BC2A2EF353.idx  Scenario.h.813C60B44FA423D9.idx  battery.cpp.3D9AFBFF098B3C48.idx  battery.h.054405E6C6B6BB7B.idx  config.h.53E7BC8AD053F821.idx  doctest.h.15E670CED863FB65.idx  door_filter.cpp.D588B05B16A0574A.idx  door_filter.h.6E5A3F0B3E62EDF2.idx  door_filter_test.cpp.24CEC1520D7717CC.idx  (+16 more)
firmware/docs/: conditional-face-fetch.md  config.md  gestures.md  power-budget.md  power-model.md  wake-protocol.md
firmware/include/: battery.h  clock_render.h  config.h  diag.h  firmware.h  gestures.h  modes.h  secrets.h.example  wake.h
firmware/include/hal/: HAL.h  IBattery.h  IClock.h  IDisplay.h  IIMU.h  ITransport.h  types.h
firmware/src/: battery.cpp  clock_render.cpp  diag.cpp  epd_probe.cpp  gestures.cpp  main.cpp  main_loop.cpp  modes.cpp  sensor_probe.cpp  smoketest.cpp  tap_probe.cpp  wake.cpp
firmware/test/: README.md  main.cpp
firmware/test/harness/: Scenario.cpp  Scenario.h
firmware/test/power/: power_budget.cpp
firmware/test/scenarios/: clock_render_tests.cpp  example_summary_cycle.cpp  main_loop_tests.cpp  night_partial_tests.cpp  now_playing_track_tests.cpp  schedule_tests.cpp  session_override_tests.cpp  wake_schedule_parse_tests.cpp  wake_schedule_persistence_tests.cpp  wake_schedule_plan_tests.cpp
pairing/: README.md  audit_text_readability.py  contact_sheet.py  corpus_analyze.py  corpus_api_fetch.py  corpus_audit.py  corpus_audit_truncations.py  corpus_build_review_page.py  corpus_build_triplets.py  corpus_build_triplets_v2.py  corpus_dedup.py  corpus_extract_fragments.py  corpus_extract_sources.py  corpus_fetch_web_sources.py  corpus_fetch_web_via_urls.py  corpus_fetch_work.py  corpus_generate_pills.py  corpus_harvest.py  corpus_ingest_personal.py  corpus_mark_summary_eligibility.py  corpus_reconcile.py  corpus_refetch.py  corpus_restore.py  corpus_review.py  corpus_validate.py  corpus_web_search.py  crop_passpartout.py  fetch_xkcd.py  inkplate_corpus_cli.py  pairing_inputs.py  publish_today.py  pyproject.toml  research_build_quotes_review.py  research_curate_quotes.py  research_fetch_quote_sources.py  research_ingest_quotes.py  retry_misses.py  test_api_fetch.py
pairing/docs/: ingestion-workflow.md  review.md  triplet-generation.md
(+461 files in other folders)
